--- a/pages/tabBar/home/css/home.scss
+++ b/pages/tabBar/home/css/home.scss
@@ -138,7 +138,9 @@ page{position: relative;background-color: #fff;}
 		.indicator {
 			position: absolute;
 			bottom: 20upx;
-			left: 20upx;
+			//left: 20upx;
+			left: 50%;
+			transform: translateX(-50%);
 			background-color: rgba(255, 255, 255, 0.4);
 			width: 150upx;
 			height: 5upx;
@@ -328,7 +330,7 @@ page{position: relative;background-color: #fff;}
 				display: -webkit-box;
 				-webkit-box-orient: vertical;
 				-webkit-line-clamp: 2;
-				text-align: justify;
+				text-align: left;
 				overflow: hidden;
 				font-size: 30upx;
 				height: 35px;
