*小程序代码提交

--- a/pages/goods/css/Goods.scss
+++ b/pages/goods/css/Goods.scss
@@ -432,7 +432,8 @@ page {
     }
 
     .buy {
-      background-color: #f06c7a;
+      // background-color: #f06c7a;
+      background-color: #FF3E3E;
     }
   }
 }
