*Util 修改 增加 前端小程序

--- a/pages/tabBar/cart/css/Cart.scss
+++ b/pages/tabBar/cart/css/Cart.scss
@@ -312,7 +312,8 @@ page {
     .btn {
       padding: 0 30upx;
       height: 50upx;
-      background-color: #f06c7a;
+      // background-color: #f06c7a;
+      background-color: #FF3E3E;
       color: #fff;
       display: flex;
       justify-content: center;
