--- a/pages/pay/payment/css/Payment.scss
+++ b/pages/pay/payment/css/Payment.scss
@@ -14,9 +14,9 @@
 
       .row {
         width: 100%;
-        height: 90upx;
+        height: 100upx;
         display: flex;
-        align-items: center;
+        // align-items: center;
 
         .nominal {
           flex-shrink: 0;
