--- a/pages/widgets/css/AccountLoginModal.scss
+++ b/pages/widgets/css/AccountLoginModal.scss
@@ -40,5 +40,12 @@
       transform: translateX(-50%);
       font-size: 18px;
     }
+
+    .close-btn{
+      position: absolute;
+      color: #FFF;
+      top:2%;
+      left:90%;
+    }
   }
 }
