--- a/pages/tabBar/home/css/home.scss
+++ b/pages/tabBar/home/css/home.scss
@@ -380,7 +380,7 @@ page {
         text-align: left;
         overflow: hidden;
         font-size: 30upx;
-        height: 35px;
+        height: auto;
       }
 
       .info {
