--- a/pages/widgets/css/AccountLoginModal.scss
+++ b/pages/widgets/css/AccountLoginModal.scss
@@ -9,43 +9,86 @@
 }
 
 .modal{
-  width: 60%;
+  width: 70%;
   position: fixed;
   height: 500upx;
   border: 1px solid #000;
+  border-radius: 15px; 
   left: 50%;
+  // opacity: 0.95;
   transform: translate(-50%,-50%);
   top:50%;
   z-index: 9999;
   overflow: hidden;
-  background-color: #FFF;
+  // background-color: #FFF;
+  background-color: rgba($color: #302F35, $alpha: 0.95);
+  // background-color: #302F35;
+  text-align: center;
   //display: block;
 
   .modal-upper-back{
-    button{
-      position: absolute;
-      bottom: 10%;
-      left: 50%;
-      transform: translateX(-50%);
-      width: 60%;
-      border-color: #1aad19 2px solid;
-    }
+    // button{
+    //   position: absolute;
+    //   bottom: 10%;
+    //   left: 50%;
+    //   transform: translateX(-50%);
+    //   width: 60%;
+    //   border-color: #1aad19 2px solid;
+    // }
 
     .modal-text{
       width: 80%;
-      position: absolute;
-      top:20%;
+      position: relative;
+      // position: absolute;
+      margin-top:18%;
       color: #FFF;
       left: 50%;
       transform: translateX(-50%);
       font-size: 18px;
     }
 
-    .close-btn{
-      position: absolute;
-      color: #FFF;
-      top:2%;
-      left:90%;
+    // .close-btn{
+    //   position: absolute;
+    //   color: #FFF;
+    //   top:2%;
+    //   left:90%;
+    // }
+  }
+
+  .png_btn-group{
+    // position: relative;
+    // top:-100upx;
+    // position: absolute;
+    // top:0; 
+    opacity: 1.0 !important;
+    margin-top: 30px;
+    font-weight: 700;
+    .getPhoneNumBtn , .back_btn{
+      width: 100%;
+      // width: 100%;
+      height: 65upx;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      margin-bottom: 15px;
+    }
+
+    .gpnb_box ,.bt_box{
+      opacity: 1;
+      position: relative;
+      width: 60%;
+      height: 65upx;
+      line-height: 65upx;
+      background-color: #EDCFB3;
+      border-radius: 15px;
+      overflow: hidden;
+
+      button{
+        position:relative;
+        top:-60upx;
+        opacity: 0;
+      }
     }
   }
+
 }
